# Changelog

All notable changes to VAULT will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

### Added
### Changed
### Deprecated
### Removed
### Fixed
### Security

## [1.4.7] - 2025-12-09

### Fixed
- Small fix for type annotation in outputs

## [1.4.6] - 2025-11-20

### Changed
- Terraform init now uses local .state for providers installation

## [1.4.5] - 2025-11-18

### Changed
- Setup command now includes allowed_source_ips generation for all providers

## [1.4.4] - 2025-11-12

### Added
- Auto-approve flag (`-y`, `--auto-approve`) for deploy and destroy commands
- Support for auto-approve in both CLI and interactive shell modes

### Changed
- Deploy and destroy commands now accept optional confirmation skip flag
- Interactive shell command handlers updated to parse flag arguments

## [1.4.3] - 2025-11-12

### Changed
- Optional variable setting for audit logging module (AWS)

## [1.4.2] - 2025-11-06

### Added
- ecs-task-breakout AWS lab

## [1.4.1] - 2025-11-04

### Added
- lambda-secrets-exposure AWS lab
- lambda-secrets-exposure auto attack script to attacks/aws/

## [1.4.0] - 2025-11-04

### Added
- Setup command (`vault setup`) for interactive configuration file generation
- Auto-detection of public IP address for AWS security groups
- Auto-detection of GCP project ID from gcloud configuration
- Auto-detection of git user email for resource tagging
- Common configuration workflow for resource prefix and owner email across all CSPs
- SSH key name support for AWS, Azure, and GCP configurations
- Automatic generation of default tags/labels for all providers
- Tab completion support for setup command with provider arguments

### Changed
- Configuration files now include lab_prefix variable for multi-user account namespacing